Increased the specificity of the dropdown menu panel to address issues with incorrect z-index ordering in the Online Builder.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/dropdown/menu/dropdownmenupanel.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-ui/components/dropdown/menu/dropdownmenupanel.css
@@ -10,7 +10,7 @@
 	--ck-dropdown-menu-menu-panel-max-width: 75vw;
 }
 
-.ck.ck-dropdown-menu__nested-menu__panel {
+.ck.ck-balloon-panel.ck-dropdown-menu__nested-menu__panel {
 	@mixin ck-drop-shadow;
 
 	background: var(--ck-color-dropdown-panel-background);
